<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="LabelFor">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="414dp"
        android:layout_height="249dp"
        android:layout_marginTop="4dp"
        android:background="#75EFFF"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_UID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_UID"
            android:textColor="#F44336"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editText_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/editText_userName" />

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button_sigIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_sigIn" />

        <Button
            android:id="@+id/button_sigOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_sigOut" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="409dp"
        android:layout_height="291dp"
        android:layout_marginTop="11dp"
        android:background="#818BC34A"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textView_readResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_readResult"
            android:textColor="#FF5722"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editText_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/editText_key" />

        <EditText
            android:id="@+id/editText_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/editText_value" />

        <Button
            android:id="@+id/button_read"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="button_read"
            android:text="@string/button_read" />

        <Button
            android:id="@+id/button_write"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="button_write"
            android:text="@string/button_write" />
    </LinearLayout>

    <EditText
        android:id="@+id/editText_debug"
        android:layout_width="381dp"
        android:layout_height="140dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="23dp"
        android:ems="10"
        android:gravity="start|top"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColor="#FF1100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
</androidx.constraintlayout.widget.ConstraintLayout>